fixed the header

--- a/css/style.css
+++ b/css/style.css
@@ -18,9 +18,7 @@ body {
     border: 1px solid #b9def0;
     height:250px;
     width: 250px;
-    margin-left: 10px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin: auto;
 }
 .headerLeft>img {
     height: 60%;
@@ -91,4 +89,8 @@ section>div {
 .languages>div {
     width: calc(100% / 3);
     display: inline-block;
+}
+.download>button {
+    width: 100%;
+    padding: 10px;
 }
