--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
     background: black;
 }
 .header {
-    background-image: url("../images/universe-backgrounds-81.jpg");
+    background-image: url("../images/universe.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     margin: 0;
